Added stuff to demo

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <header>
       Header
-      <nav>Navigering</nav>
+      <nav class="navigation">Navigering</nav>
     </header>
     <h1>Rubrik 1</h1>
     <h2>Rubrik 2</h2>
@@ -26,6 +26,18 @@
     <section class="content">Detta är en sektion</section>
     <article class="content">Detta är en artikel</article>
 
+    <section>
+      <article>sit amet</article>
+      <div>
+        <article>lorem</article>
+      </div>
+      <div>
+        <article>ipsum</article>
+      </div>
+      <div>
+        <article>dolor</article>
+      </div>
+    </section>
     <div class="mydiv">
       <div class="circle"></div>
     </div>
