--- a/animations.html
+++ b/animations.html
@@ -5,19 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link href="css/responsive.css" rel="stylesheet" />
+    <link href="css/animations.css" rel="stylesheet" />
   </head>
   <body>
-    <div class="container">
-      <aside></aside>
-      <main></main>
-      <section></section>
-    </div>
-
-    <div class="container wide"></div>
-
-    <div class="center">
-      <div class="heart"></div>
-    </div>
+    <nav>
+      <ul>
+        <li>Hem</li>
+        <li>Kontakta</li>
+        <li>Om oss</li>
+      </ul>
+    </nav>
+    <!-- <div class="blue"></div>
+    <div class="hidden"></div> -->
+    <div class="moving"></div>
   </body>
 </html>
