--- a/heart.html
+++ b/heart.html
@@ -5,19 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link href="css/responsive.css" rel="stylesheet" />
+    <link href="css/heart.css" rel="stylesheet" />
   </head>
   <body>
-    <div class="container">
-      <aside></aside>
-      <main></main>
-      <section></section>
-    </div>
-
-    <div class="container wide"></div>
-
-    <div class="center">
-      <div class="heart"></div>
-    </div>
+    <div class="heart"></div>
   </body>
 </html>
