Added more scss

--- a/sass.html
+++ b/sass.html
@@ -9,11 +9,33 @@
   </head>
   <body>
     <main class="container">
-      <section>
+      <section class="content">
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugiat labore
         tempora corrupti, pariatur, perspiciatis possimus dolorem at eaque,
         soluta totam quae doloribus nemo consectetur blanditiis alias rem
         impedit saepe nisi!
+        <button class="btn">Spara</button>
+      </section>
+      <section class="content-xl">
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugiat labore
+        tempora corrupti, pariatur, perspiciatis possimus dolorem at eaque,
+        soluta totam quae doloribus nemo consectetur blanditiis alias rem
+        impedit saepe nisi!
+        <button class="btn">Spara</button>
+      </section>
+      <section class="content-lg">
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugiat labore
+        tempora corrupti, pariatur, perspiciatis possimus dolorem at eaque,
+        soluta totam quae doloribus nemo consectetur blanditiis alias rem
+        impedit saepe nisi!
+        <button class="btn">Spara</button>
+      </section>
+      <section class="content-sm">
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugiat labore
+        tempora corrupti, pariatur, perspiciatis possimus dolorem at eaque,
+        soluta totam quae doloribus nemo consectetur blanditiis alias rem
+        impedit saepe nisi!
+        <button class="btn">Spara</button>
       </section>
     </main>
   </body>
