--- a/SCSS_Extended/index.html
+++ b/SCSS_Extended/index.html
@@ -8,7 +8,20 @@
     <link href="css/main.css" rel="stylesheet" />
   </head>
   <body>
-    <div class="container"></div>
+    <div class="container">
+      <span class="container__text"
+        >Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque iste
+        sapiente error dolorum alias accusantium, omnis minus minima molestias
+        laboriosam sed dignissimos natus dolorem vero facere eum! Enim, quae
+        eligendi.</span
+      >
+      <span class="container__text--important"
+        >Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi enim
+        doloremque repudiandae modi alias accusantium accusamus facere fuga cum
+        officia explicabo distinctio dolorum placeat ratione aliquid
+        necessitatibus adipisci, sint a.</span
+      >
+    </div>
     <div class="container--small"></div>
 
     <button class="btn">Vanlig knapp</button>
